--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
   margin-top: 0;
   margin-bottom: 0;
   line-height: .75;
+    height: 20px;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
@@ -52,6 +53,7 @@ h1 {
 .box {
   width: 100%;
   overflow: none;
+    align: center;
 }
 
 .content-name {
