--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ h1 {
   text-align: center;
 }
 
-.name2 {
+.content-name name2 {
   color: white;
   background-color: #ff0000;
   text-align: center;
