--- a/styles.css
+++ b/styles.css
@@ -1,135 +1,96 @@
-#header-nav {
-  background-color: #f6b319;
-  border-radius: 0;
-  border: 1;
-  height:30px;
+.container-fluid{
+	margin: 0;
+	padding: 0;
 }
 
-.navbar-brand h1 { 
-  font-family: 'Lora', serif;
-  color: #557c3e;
-  font-size: 1.5em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: .75;
- 
-}
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
-}
-.navbar-brand p { 
-  color: #000;
-  text-transform: uppercase;
-  font-size: .7em;
-  margin-top: 15px;
-}
-.navbar-brand p span { 
-  vertical-align: middle;
-}
-* {
-  box-sizing: border-box;
+.navbar{
+	border-radius: 0px;
+	background-color: rgba(0,0,0,0.8);
 }
 
-body {
+.navbar-brand{
+  font-size: 35px;
+  color: white;
+  padding-left: 25px;
+}
+
+.navbar-brand:hover{
+	color: white;
+}
+
+.nav{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
+  text-align: center;
   margin: 0;
   padding: 0;
-  font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
-.row {
-  margin-top: 5%;
-  margin-bottom: 5%;
+.navbar-toggle{
+	border: 2px solid white;
+	margin-right: 25px;
 }
 
-h1 {
+.icon-bar{
+	background-color: white;
+}
+
+
+.main-title{
   margin-bottom: 15px;
   text-align: center;
   color: #ff4532;
   font-size: 50px;
-}
-
-.box {
-  width: 100%;
-  overflow: none;
-   text-align: center;
-}
-
-.content-name {
-  overflow: none;
-  text-align: center;
-  border: 4px solid black;
-  width: 100px;
-  height: 40px;
-  padding: 5px;
-  float: right;
-  margin-right:380px;
-  margin-top: 0px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
   font-weight: bold;
-  position: relative;
 }
 
-.content {
-  border: 5px solid black;
-  width: 90%;
-  height: auto;
-  margin: 2.5%;
-  color: black;
-  font-size: 25px;
-  padding: 2%;
-  padding-top: 55px;
-  background-color: rgba(0, 0, 0, 0.3);
+li{
+	box-sizing: border-box;
+	width: 100%;
 }
 
-.name1 {
-  background-color: #ffb6c1;
-  text-align: center;
-
+.menu-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
 }
 
-.name2 {
-  color: white;
-  background-color: #ff0000;
-  text-align: center;
-}
-.name3 {
-  background-color: #ffff00;
-  text-align: center;
-}
-/********** Large devices only **********/
-@media (min-width: 992px) {
-  .col-lg-4 {
-    float: left;
-    width: 100%;
-  }
-}
-/********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6,
-  .col-md-12 {
-    float: left;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-12 {
-    margin-left: -10px;
-    width: 100%;
-  }
-  .name3 {
-    margin-right: 65px;
-    width: 100px;
-  }
+.menu-item:hover{
+	background-color: rgba(0,0,0,0.9);
+	color: rgba(0,0,0,0.4);
 }
 
-@media (min-width: 0px) and (max-width: 767px) {
-  .col-sm-12 {
-    float: left;
-    width: 100%;
-  }
-  .content-name {
-    margin-right: 30px;
-  }
+
+
+.row{
+	margin: 20px;
+}
+
+.content-box{
+	margin: 20px;
+	width: auto;
+	height: auto;
+	color: black;
+	background-color: rgba(0,0,0,0.2);
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	padding: 20px;
+}
+
+.item-name{
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+#top{
+
 }
